--- a/templates/home.html
+++ b/templates/home.html
@@ -1,7 +1,8 @@
-{% extends 'index.html' %} {% block head %}
-<link rel="stylesheet" href="{{ url_for('static', filename='css/spotify/tracks.css') }}" />
+{% extends 'track.html' %} {% block head %}
 <link rel="stylesheet" href="{{ url_for('static', filename='css/home.css') }}" />
-{{super()}} {% endblock %} {% block body %} {{super()}}
+{{super()}} {% endblock %}
+
+{% block body %}
 
 <div class="background">
     <img class="landscape" src="{{url_for('static', filename='assets/landscape.jpeg')}}" />
@@ -14,320 +15,5 @@
     </div>
 </div>
 
-<div class="featured-song">
-    <div class="spotify-logo">
-        <img src="{{url_for('static', filename='assets/spotify_logo_white.png')}}" />
-    </div>
-    <div class="title">
-        <h1>
-            Song of The Day
-        </h1>
-        <h3>
-            <a href="{{track.url}}">{{track.name}}</a>
-        </h3>
-        <h3>
-            by
-        </h3>
-        <h3>
-            <a href="{{track.artists[0].url}}">{{track.artists[0].name}}</a>
-        </h3>
-    </div>
-    <div class="cover-box"><img src="{{track.cover}}" class="cover" /></div>
-    <div class="player">
-        <div>
-            <span class="play-pause">
-                <i id="main-play-pause-button" class="fa fa-play"></i>
-                <audio id="player" class="audio" src="{{track.preview}}"></audio>
-            </span>
-        </div>
-        <div class="hp_slide">
-            <div class="hp_range"></div>
-        </div>
-    </div>
-    <hr />
-    <div class="stats">
-        <h1>Track Information</h1>
-        <div class="song-data">
-            <div class="text-stats">
-                <div>
-                    <h5>Duration</h5>
-                    {{track.duration}}
-                </div>
-                <div>
-                    <h5>Release Date</h5>
-                    {{track.release}}
-                </div>
-                {% for k, v in readable_audio_features(track.features).items() %}
-                <div>
-                    <h5>{{k}}</h5>
-                    {{v}}
-                </div>
-                {% endfor %}
-            </div>
-            <div class="feature-type">
-                <div class="popover-container">
-                    Acousticness: {{(100 *
-                    track.features['acousticness'])|round(2)}}%
-                    <span data-bs-title="Acousticness"
-                        data-bs-content="A confidence measure from 0% to 100% of whether the track is acoustic. Higher percentages represent higher confidence the track is acoustic."
-                        data-bs-toggle="popover" data-bs-trigger="hover focus" data-bs-placement="right"
-                        data-bs-container="body">
-                        <i class="fa fa-info-circle"></i>
-                    </span>
-                </div>
-                <div class="bar">
-                    <div class="acousticness" data-value="{{track.features['acousticness']}}"></div>
-                </div>
-            </div>
-            <div class="feature-type">
-                <div class="popover-container">
-                    Danceability: {{(100 *
-                    track.features['danceability'])|round(2)}}%
-                    <span data-bs-title="Danceability"
-                        data-bs-content="Danceability describes how suitable a track is for dancing based on a combination of musical elements including tempo, rhythm stability, beat strength, and overall regularity. A value of 0% is least danceable and 100% is most danceable."
-                        data-bs-toggle="popover" data-bs-trigger="hover focus" data-bs-placement="right"
-                        data-bs-container="body">
-                        <i class="fa fa-info-circle"></i>
-                    </span>
-                </div>
-                <div class="bar">
-                    <div class="danceability" data-value="{{track.features['danceability']}}"></div>
-                </div>
-            </div>
-            <div class="feature-type">
-                <div class="popover-container">
-                    Energy: {{(100 * track.features['energy'])|round(2)}}%
-                    <span data-bs-title="Energy"
-                        data-bs-content="Energy is a measure from 0% to 100% and represents a perceptual measure of intensity and activity. Typically, energetic tracks feel fast, loud, and noisy. For example, death metal has high energy, while a Bach prelude scores low on the scale. Perceptual features contributing to this attribute include dynamic range, perceived loudness, timbre, onset rate, and general entropy."
-                        data-bs-toggle="popover" data-bs-trigger="hover focus" data-bs-placement="right"
-                        data-bs-container="body">
-                        <i class="fa fa-info-circle"></i>
-                    </span>
-                </div>
-                <div class="bar">
-                    <div class="energy" data-value="{{track.features['energy']}}"></div>
-                </div>
-            </div>
-            <div class="feature-type">
-                <div class="popover-container">
-                    Instrumentalness: {{(100 *
-                    track.features['instrumentalness'])|round(2)}}%
-                    <span data-bs-title="Instrumentalness"
-                        data-bs-content='Predicts whether a track contains no vocals. "Ooh" and "aah" sounds are treated as instrumental in this context. Rap or spoken word tracks are clearly "vocal". The closer the instrumentalness value is to 100%, the greater likelihood the track contains no vocal content. Values above 50% are intended to represent instrumental tracks, but confidence is higher as the value approaches 100%.'
-                        data-bs-toggle="popover" data-bs-trigger="hover focus" data-bs-placement="right"
-                        data-bs-container="body">
-                        <i class="fa fa-info-circle"></i>
-                    </span>
-                </div>
-                <div class="bar">
-                    <div class="instrumentalness" data-value="{{track.features['instrumentalness']}}"></div>
-                </div>
-            </div>
-            <div class="feature-type">
-                <div class="popover-container">
-                    Liveness: {{(100 * track.features['liveness'])|round(2)}}%
-                    <span data-bs-title="Liveness"
-                        data-bs-content="Detects the presence of an audience in the recording. Higher liveness values represent an increased probability that the track was performed live. A value above 80% or higher provides strong likelihood that the track is live."
-                        data-bs-toggle="popover" data-bs-trigger="hover focus" data-bs-placement="right"
-                        data-bs-container="body">
-                        <i class="fa fa-info-circle"></i>
-                    </span>
-                </div>
-                <div class="bar">
-                    <div class="liveness" data-value="{{track.features['liveness']}}"></div>
-                </div>
-            </div>
-            <div class="feature-type">
-                <div class="popover-container">
-                    Speechiness: {{(100 *
-                    track.features['speechiness'])|round(2)}}%
-                    <span data-bs-title="Speechiness"
-                        data-bs-content="Speechiness detects the presence of spoken words in a track. The more exclusively speech-like the recording (e.g. talk show, audio book, poetry), the closer to 100% the attribute value. Values above 66% describe tracks that are probably made entirely of spoken words. Values between 33% and 66% describe tracks that may contain both music and speech, either in sections or layered, including such cases as rap music. Values below 33% most likely represent music and other non-speech-like tracks."
-                        data-bs-toggle="popover" data-bs-trigger="hover focus" data-bs-placement="right"
-                        data-bs-container="body">
-                        <i class="fa fa-info-circle"></i>
-                    </span>
-                </div>
-                <div class="bar">
-                    <div class="speechiness" data-value="{{track.features['speechiness']}}"></div>
-                </div>
-            </div>
-            <div class="feature-type">
-                <div class="popover-container">
-                    Valence: {{(100 * track.features['valence'])|round(2)}}%
-                    <span data-bs-title="Valence"
-                        data-bs-content="A measure from 0% to 100% describing the musical positiveness conveyed by a track. Tracks with high valence sound more positive (e.g. happy, cheerful, euphoric), while tracks with low valence sound more negative (e.g. sad, depressed, angry)."
-                        data-bs-toggle="popover" data-bs-trigger="hover focus" data-bs-placement="right"
-                        data-bs-container="body">
-                        <i class="fa fa-info-circle"></i>
-                    </span>
-                </div>
-                <div class="bar">
-                    <div class="valence" data-value="{{track.features['valence']}}"></div>
-                </div>
-            </div>
-        </div>
-    </div>
-    <hr />
-    <div class="table-box table-responsive">
-        <div class="header d-flex flex-wrap">
-            <div class="d-flex flex-column name-logo-and-buttons">
-                <div class="d-flex name-and-logo">
-                    <div class="table-name-box">
-                        <h3 class="table-name">Album Tracks</h3>
-                    </div>
-                </div>
-            </div>
-            <div class="ms-auto p-2 d-flex align-items-end select-box">
-                <select class="form-select form-select-sm table-sort" data-table-id="1">
-                    <option selected value="order">Sort by track order</option>
-                    <option value="name">Sort by track name</option>
-                    <option value="artist">Sort by artists</option>
-                    <option value="duration">
-                        Sort by track length (short to long)
-                    </option>
-                    <option value="popularity">
-                        Sort by track popularity (least to most)
-                    </option>
-                    <option value="tempo">
-                        Sort by track tempo (slowest to fastest)
-                    </option>
-                    <option value="danceability">
-                        Sort by danceability (least to most)
-                    </option>
-                    <option value="valence">Sort by mood (sad to happy)</option>
-                    <option value="energy">
-                        Sort by energy (least to most)
-                    </option>
-                </select>
-            </div>
-        </div>
-        <table id="1" class="table align-middle">
-            <thead>
-                <tr>
-                    <th class="rank" scope="col">#</th>
-                    <th scope="col">Cover</th>
-                    <th scope="col">Track</th>
-                    <th scope="col">Artist</th>
-                    <th class="unseen" scope="col">Duration</th>
-                </tr>
-            </thead>
-            <tbody>
-                {% for track in track.album.tracks %}
-                <tr class="rows" data-track="{{track.json}}">
-                    <th class="index" scope="row">
-                        <div class="overlay">
-                            <h4>{{loop.index}}</h4>
-                            <span class="icon play-pause">
-                                <i class="fa fa-play small-play-button"></i>
-                                <audio class="audio" src="{{track.preview}}"></audio>
-                            </span>
-                        </div>
-                    </th>
-                    <td>
-                        <div class="small-cover">
-                            <img src="{{track.cover}}" />
-                        </div>
-                    </td>
-                    <td>
-                        <a href="{{track.url}}" class="link-light track">
-                            {{track.name}}
-                        </a>
-                    </td>
-                    <td>
-                        {% for artist in track.artists %}
-                        <a class="link-light" href="{{artist.url}}">{{artist.name}}</a>
-                        {% endfor %}
-                    </td>
-                    <td class="unseen">{{track.duration}}</td>
-                </tr>
-                {% endfor %}
-            </tbody>
-        </table>
-    </div>
-    <div class="table-box table-responsive">
-        <div class="header d-flex flex-wrap">
-            <div class="d-flex flex-column name-logo-and-buttons">
-                <div class="d-flex name-and-logo">
-                    <div class="table-name-box">
-                        <h3 class="table-name">Artist Top Tracks</h3>
-                    </div>
-                </div>
-            </div>
-            <div class="ms-auto p-2 d-flex align-items-end select-box">
-                <select class="form-select form-select-sm table-sort" data-table-id="2">
-                    <option selected value="order">Sort by track order</option>
-                    <option value="name">Sort by track name</option>
-                    <option value="album">Sort by album</option>
-                    <option value="duration">
-                        Sort by track length (short to long)
-                    </option>
-                    <option value="popularity">
-                        Sort by track popularity (least to most)
-                    </option>
-                    <option value="tempo">
-                        Sort by track tempo (slowest to fastest)
-                    </option>
-                    <option value="danceability">
-                        Sort by danceability (least to most)
-                    </option>
-                    <option value="valence">Sort by mood (sad to happy)</option>
-                    <option value="energy">
-                        Sort by energy (least to most)
-                    </option>
-                </select>
-            </div>
-        </div>
-        <table id="2" class="table align-middle">
-            <thead>
-                <tr>
-                    <th class="rank" scope="col">#</th>
-                    <th scope="col">Cover</th>
-                    <th scope="col">Track</th>
-                    <th scope="col">Artist</th>
-                    <th class="unseen" scope="col">Duration</th>
-                </tr>
-            </thead>
-            <tbody>
-                {% for track in track.artists[0].top_tracks %}
-                <tr class="rows" data-track="{{track.json}}">
-                    <th class="index" scope="row">
-                        <div class="overlay">
-                            <h4>{{loop.index}}</h4>
-                            <span class="icon play-pause">
-                                <i class="fa fa-play small-play-button"></i>
-                                <audio class="audio" src="{{track.preview}}"></audio>
-                            </span>
-                        </div>
-                    </th>
-                    <td>
-                        <div class="small-cover">
-                            <img src="{{track.cover}}" />
-                        </div>
-                    </td>
-                    <td>
-                        <a href="{{track.url}}" class="link-light track">
-                            {{track.name}}
-                        </a>
-                    </td>
-                    <td>
-                        {% for artist in track.artists %}
-                        <a class="link-light" href="{{artist.url}}">{{artist.name}}</a>
-                        {% endfor %}
-                    </td>
-                    <td class="unseen">{{track.duration}}</td>
-                </tr>
-                {% endfor %}
-            </tbody>
-        </table>
-    </div>
-</div>
-<footer class="border-top footer">
-    <div class="text-center">
-        <a class="link-secondary" href="https://github.com/Hecate946/Sketyl" target="_blank">Source</a>
-        <a class="link-secondary" href="{{url_for('privacy_policy')}}">Privacy Policy</a>
-        <a class="link-secondary" href="{{url_for('faq_page')}}">FAQs</a>
-    </div>
-</footer>
-<script src="{{ url_for('static', filename='js/spotify.js')}}"></script>
+{{super()}}
 {% endblock %}
