--- a/templates/spotify/albums.html
+++ b/templates/spotify/albums.html
@@ -62,8 +62,8 @@
         </tbody>
     </table>
 
-    <script src="{{ url_for('static', filename='js/spotify.js')}}"></script>
-    <script src="{{url_for('static', filename='js/spotify/utils.js')}}"></script>
-    <script src="{{url_for('static', filename='js/spotify/albums.js')}}"></script>
+    <script src="{{ url_for('static', filename='js/player.js')}}"></script>
+    <script src="{{url_for('static', filename='js/utils.js')}}"></script>
+    <script src="{{url_for('static', filename='js/albums.js')}}"></script>
     {% endblock %}
 </div>
