--- a/templates/spotify/charts.html
+++ b/templates/spotify/charts.html
@@ -77,6 +77,6 @@
     <script src="{{url_for('static', filename='js/spotify/chart.js')}}"></script>
     <script src="{{ url_for('static', filename='js/spotify.js')}}"></script>
     <script src="{{url_for('static', filename='js/spotify/utils.js')}}"></script>
-    <script src="{{url_for('static', filename='js/spotify/tracks.js')}}"></script>
+    <script src="{{url_for('static', filename='js/tracks.js')}}"></script>
 
     {% endblock %}
