--- a/static/css/index.css
+++ b/static/css/index.css
@@ -37,6 +37,18 @@
     font-size: 18px;
 }
 
+.link-secondary {
+    display: inline-block;
+    padding: 20px;
+    font-size: 25px;
+}
+
+.footer {
+    margin-top: 20px;
+    color: white;
+}
+
+
 @media only screen and (max-width: 992px) {
     .login-button, .logout-button {
         margin-right: 0;
