--- a/static/css/main.css
+++ b/static/css/main.css
@@ -39,9 +39,7 @@
 }
 
 .chart-container {
-    border-radius: 10px;
-    margin: 10px;
-    padding: 60px;
+    margin: 50px 200px;
 }
 
 .accordion-item {
@@ -85,5 +83,8 @@
 
     .heading h1 {
         font-size: 20px;
+    }
+    .chart-container {
+        margin: 0;
     }
 }
