--- a/templates/index.html
+++ b/templates/index.html
@@ -68,6 +68,7 @@
   <script src="https://cdnjs.cloudflare.com/ajax/libs/Chart.js/2.9.0/Chart.min.js"></script>
   <script src="{{url_for('static', filename='js/chart.js')}}"></script>
   <script src="{{url_for('static', filename='js/utils.js')}}"></script>
+  <script src="{{url_for('static', filename='js/track.js')}}"></script>
   <script src="{{url_for('static', filename='js/tracks.js')}}"></script>
   <script src="{{url_for('static', filename='js/player.js')}}"></script>
 
