--- a/static/css/main.css
+++ b/static/css/main.css
@@ -9,7 +9,7 @@
     border-radius: 10px;
     margin: 20px;
     color: #FFFFFF;
-    font-size: 30px;
+    font-size: 25px;
     font-weight: bold;
     padding: 10px 20px;
 }
@@ -98,5 +98,9 @@
     }
     .chart-container {
         margin: 0;
+    }
+
+    .profile-tag {
+        font-size: 20px;
     }
 }
