--- a/templates/index.html
+++ b/templates/index.html
@@ -71,6 +71,7 @@
   <script src="{{url_for('static', filename='js/track.js')}}"></script>
   <script src="{{url_for('static', filename='js/tracks.js')}}"></script>
   <script src="{{url_for('static', filename='js/player.js')}}"></script>
+  <script src="{{url_for('static', filename='js/main.js')}}"></script>
 
   <footer class="border-top footer">
     <div class="text-center">
