--- a/templates/index.html
+++ b/templates/index.html
@@ -73,8 +73,8 @@
   <script src="{{url_for('static', filename='js/player.js')}}"></script>
   <script src="{{url_for('static', filename='js/main.js')}}"></script>
 
-  <footer class="border-top footer">
-    <div class="text-center">
+  <footer class="border-top">
+    <div class="footer">
       <a class="link-secondary" href="https://github.com/Hecate946/Sketyl" target="_blank">Source</a>
       <a class="link-secondary" href="{{url_for('privacy_policy')}}">Privacy Policy</a>
       <a class="link-secondary" href="{{url_for('faq_page')}}">FAQs</a>
