--- a/static/css/index.css
+++ b/static/css/index.css
@@ -36,18 +36,15 @@
 .nav-link {
     font-size: 18px;
 }
-
-.link-secondary {
+.footer {
+    display: flex;
+    justify-content: center;
+}
+.footer a {
     display: inline-block;
     padding: 20px;
     font-size: 20px;
 }
-
-.footer {
-    margin-top: 20px;
-    color: white;
-}
-
 
 @media only screen and (max-width: 992px) {
     .login-button, .logout-button {
