--- a/templates/index.html
+++ b/templates/index.html
@@ -6,6 +6,8 @@
   <meta property="og:type" content="website" />
   <meta property="og:url" content="https://sketyl.com/" />
   <meta property="og:image" content="{{url_for('static', filename='assets/logo.png')}}" />
+
+  <meta route-based name="keywords" content="spotify,stats,tracks,artists,top,ranking,wrapped,personal,genre,audio,previews,profile" >
   <!-- Required meta tags -->
   <meta charset="utf-8">
   <meta name="viewport" content="width=device-width, initial-scale=1">
