--- a/templates/spotify/playlists.html
+++ b/templates/spotify/playlists.html
@@ -1,5 +1,5 @@
 {% extends 'index.html' %} {% block head %} {{ super() }}
-<link rel="stylesheet" href="{{ url_for('static', filename='css/spotify/playlists.css') }}" />
+<link rel="stylesheet" href="{{ url_for('static', filename='css/playlists.css') }}" />
 {% endblock %} {% block body %} {{ super() }}
 <div class="table-box bg-dark table-responsive">
     <div class="header d-flex flex-wrap">
@@ -57,3 +57,4 @@
     </table>
     {% endblock %}
 </div>
+<script src="{{url_for('static', filename='js/playlist.js')}}"></script>
