--- a/templates/spotify/playlists.html
+++ b/templates/spotify/playlists.html
@@ -1,5 +1,5 @@
 {% extends 'index.html' %} {% block head %} {{ super() }}
-<link rel="stylesheet" href="{{ url_for('static', filename='css/playlists.css') }}" />
+<link rel="stylesheet" href="{{ url_for('static', filename='css/spotify/tracks.css') }}" />
 {% endblock %} {% block body %} {{ super() }}
 <div class="table-box bg-dark table-responsive">
     <div class="header d-flex flex-wrap">
@@ -15,6 +15,9 @@
                 <option value="owner">Sort by owner</option>
                 <option value="tracks">
                     Sort by number of tracks (least to most)
+                </option>
+                <option value="type">
+                    Sory by playlist type.
                 </option>
             </select>
         </div>
@@ -33,15 +36,22 @@
         <tbody>
             {% for playlist in playlists %}
             <tr class="rows" data-playlist="{{playlist.json}}">
-                <th scope="row">{{playlist.index}}</th>
-                <td>
-                    <img class="cover" src="{{playlist.cover}}">
+                <th class="index" scope="row">
+                    <div class="overlay">
+                        <h4>{{loop.index}}</h4>
+                    </div>
+                </th>
+                <td class="cover-td">
+                    <div class="cover">
+                        <img src="{{playlist.cover}}" />
+                    </div>
                 </td>
                 <td>
                     <a href="{{url_for('playlists', playlist_id=playlist.id)}}" class="link-light track">
                         {{playlist.name}}
                     </a>
                 </td>
+
                 <td>
                     <a class="link-light" href="{{playlist.owner.url}}">{{playlist.owner.name}}</a>
                 </td>
@@ -55,6 +65,6 @@
             {% endfor %}
         </tbody>
     </table>
+    <script src="{{url_for('static', filename='js/playlists.js')}}"></script>
     {% endblock %}
 </div>
-<script src="{{url_for('static', filename='js/playlist.js')}}"></script>
