--- a/templates/spotify/tracks.html
+++ b/templates/spotify/tracks.html
@@ -68,7 +68,7 @@
 
                 <th class="index" scope="row">
                     <div class="overlay">
-                        <h4>{{loop.index}}</h4>
+                        <h4 class="number">{{loop.index}}</h4>
                         <span class="icon play-pause">
                             <i class="fa fa-play small-play-button"></i>
                             <audio class="audio" src="{{track.preview}}"></audio>
