--- a/templates/home.html
+++ b/templates/home.html
@@ -9,7 +9,7 @@
     <div class="content d-flex align-items-center text-center">
         <div>
             <h1>Sketyl</h1>
-            <h2>Spotify statistics with style and a bit of satire.</h2>
+            <h2>Spotify statistics with a subpar slogan.</h2>
             <a href="{{url_for('spotify_connect')}}" class="btn btn-lg">Connect to Spotify</a>
         </div>
     </div>
