hyperlink images to albums on spotify

--- a/templates/main.html
+++ b/templates/main.html
@@ -108,7 +108,7 @@
                                 </th>
                                 <td>
                                     <div class="small-cover">
-                                        <img src="{{track.cover}}" />
+                                        <a href="{{track.album.url}}" target="_blank"><img src="{{track.cover}}" /></a>
                                     </div>
                                 </td>
                                 <td>
