--- a/templates/spotify/charts.html
+++ b/templates/spotify/charts.html
@@ -45,7 +45,8 @@
                             <td>
                                 <div class="container">
                                     <div class="overlay">
-                                        <img class="cover" src="{{track.cover}}" />
+                                        <a href="{{track.album.url}}" target="_blank"><img class="cover"
+                                                src="{{track.cover}}" /></a>
                                         <span class="icon play-pause">
                                             <i class="fa fa-play"></i>
                                             <audio class="audio" src="{{track.preview}}"></audio>
