--- a/templates/spotify/playlists.html
+++ b/templates/spotify/playlists.html
@@ -43,7 +43,7 @@
                 </th>
                 <td class="cover-td">
                     <div class="cover">
-                        <img src="{{playlist.cover}}" />
+                        <a href="{{playlist.url}}" target="_blank"><img src="{{playlist.cover}}" /></a>
                     </div>
                 </td>
                 <td>
