--- a/templates/spotify/tracks.html
+++ b/templates/spotify/tracks.html
@@ -77,7 +77,7 @@
                 </th>
                 <td>
                     <div class="cover">
-                        <img src="{{track.cover}}" />
+                        <a href="{{track.album.url}}" target="_blank"><img src="{{track.cover}}" /></a>
                     </div>
                 </td>
                 <td>
