--- a/templates/track.html
+++ b/templates/track.html
@@ -23,7 +23,8 @@
             <a href="{{track.artists[0].url}}">{{track.artists[0].name}}</a>
         </h3>
     </div>
-    <div class="cover-box"><img src="{{track.cover}}" class="cover" /></div>
+    <div class="cover-box"><a href="{{track.album.url}}" target="_blank"><img src="{{track.cover}}" class="cover" /></a>
+    </div>
     <div class="player">
         <div>
             <span class="play-pause">
@@ -217,7 +218,7 @@
                     </th>
                     <td>
                         <div class="small-cover">
-                            <img src="{{track.cover}}" />
+                            <a href="{{track.album.url}}" target="_blank"><img src="{{track.cover}}" /></a>
                         </div>
                     </td>
                     <td>
@@ -293,7 +294,7 @@
                     </th>
                     <td>
                         <div class="small-cover">
-                            <img src="{{track.cover}}" />
+                            <a href="{{track.album.url}}" target="_blank"><img src="{{track.cover}}" /></a>
                         </div>
                     </td>
                     <td>
