--- a/templates/spotify/tracks.html
+++ b/templates/spotify/tracks.html
@@ -35,20 +35,14 @@
                 <option value="name">Sort by track name</option>
                 <option value="artist">Sort by artists</option>
                 <option value="album">Sort by album</option>
-                <option value="duration">
-                    Sort by track length (short to long)
-                </option>
-                <option value="popularity">
-                    Sort by track popularity (least to most)
-                </option>
-                <option value="tempo">
-                    Sort by track tempo (slowest to fastest)
-                </option>
-                <option value="danceability">
-                    Sort by danceability (least to most)
-                </option>
+                <option value="date">Sort by release date (oldest to newest)</option>
+                <option value="duration">Sort by track length (short to long)</option>
+                <option value="popularity">Sort by track popularity (least to most)</option>
+                <option value="tempo">Sort by track tempo (slowest to fastest)</option>
+                <option value="danceability">Sort by danceability (least to most)</option>
                 <option value="valence">Sort by mood (sad to happy)</option>
                 <option value="energy">Sort by energy (least to most)</option>
+                <option value="random">Sort randomly</option>
             </select>
         </div>
     </div>
